<resources>
    <string name="app_name">Yaskon</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="or">or</string>
    <string name="forget_password">Forgot Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="where_to">Where to?</string>
    <string name="good_for_your_budget">Good for your budget</string>
    <string name="active_listers">Active Listers</string>
    <string name="popular_places">popular places</string>
    <string name="highly_recommended">Highly Recommended</string>
    <string name="vensia">vensia</string>
    <string name="you">you</string>
    <string-array name="slider">
        <item>400</item>
        <item>700</item>
    </string-array>

    <string-array name="country">
        <item>+93</item>
        <item>+355</item>
        <item>+213</item>
        <item>+376</item>
        <item>+244</item>
        <item>+672</item>
        <item>+54</item>
        <item>+374</item>
        <item>+297</item>
        <item>+61</item>
        <item>+43</item>
        <item>+994</item>
        <item>+973</item>
        <item>+880</item>
        <item>+375</item>
        <item>+32</item>
        <item>+501</item>
        <item>+229</item>
        <item>+975</item>
        <item>+591</item>
        <item>+387</item>
        <item>+267</item>
        <item>+55</item>
        <item>+673</item>
        <item>+359</item>
        <item>+226</item>
        <item>+95</item>
        <item>+257</item>
        <item>+855</item>
        <item>+237</item>
        <item>+1</item>
        <item>+238</item>
        <item>+236</item>
        <item>+235</item>
        <item>+56</item>
        <item>+86</item>
        <item>+61</item>
        <item>+61</item>
        <item>+57</item>
        <item>+269</item>
        <item>+242</item>
        <item>+243</item>
        <item>+682</item>
        <item>+506</item>
        <item>+385</item>
        <item>+53</item>
        <item>+357</item>
        <item>+420</item>
        <item>+45</item>
        <item>+253</item>
        <item>+670</item>
        <item>+593</item>
        <item>+20</item>
        <item>+503</item>
        <item>+240</item>
        <item>+291</item>
        <item>+372</item>
        <item>+251</item>
        <item>+500</item>
        <item>+298</item>
        <item>+679</item>
        <item>+358</item>
        <item>+33</item>
        <item>+689</item>
        <item>+241</item>
        <item>+220</item>
        <item>+995</item>
        <item>+49</item>
        <item>+233</item>
        <item>+350</item>
        <item>+30</item>
        <item>+299</item>
        <item>+502</item>
        <item>+224</item>
        <item>+245</item>
        <item>+592</item>
        <item>+509</item>
        <item>+504</item>
        <item>+852</item>
        <item>+36</item>
        <item>+91</item>
        <item>+62</item>
        <item>+98</item>
        <item>+964</item>
        <item>+353</item>
        <item>+44</item>
        <item>+972</item>
        <item>+39</item>
        <item>+225</item>
        <item>+81</item>
        <item>+962</item>
        <item>+7</item>
        <item>+254</item>
        <item>+686</item>
        <item>+965</item>
        <item>+996</item>
        <item>+856</item>
        <item>+371</item>
        <item>+961</item>
        <item>+266</item>
        <item>+231</item>
        <item>+218</item>
        <item>+423</item>
        <item>+370</item>
        <item>+352</item>
        <item>+85</item>
        <item>+389</item>
        <item>+261</item>
        <item>+265</item>
        <item>+60</item>
        <item>+960</item>
        <item>+223</item>
        <item>+356</item>
        <item>+692</item>
        <item>+222</item>
        <item>+230</item>
        <item>+262</item>
        <item>+52</item>
        <item>+691</item>
        <item>+373</item>
        <item>+377</item>
        <item>+976</item>
        <item>+382</item>
        <item>+212</item>
        <item>+258</item>
        <item>+264</item>
        <item>+674</item>
        <item>+977</item>
        <item>+31</item>
        <item>+599</item>
        <item>+687</item>
        <item>+64</item>
        <item>+505</item>
        <item>+227</item>
        <item>+234</item>
        <item>+683</item>
        <item>+850</item>
        <item>+47</item>
        <item>+968</item>
        <item>+92</item>
        <item>+680</item>
        <item>+507</item>
        <item>+675</item>
        <item>+595</item>
        <item>+51</item>
        <item>+63</item>
        <item>+870</item>
        <item>+48</item>
        <item>+351</item>
        <item>+1</item>
        <item>+974</item>
        <item>+40</item>
        <item>+7</item>
        <item>+250</item>
        <item>+590</item>
        <item>+685</item>
        <item>+378</item>
        <item>+239</item>
        <item>+966</item>
        <item>+221</item>
        <item>+381</item>
        <item>+248</item>
        <item>+232</item>
        <item>+65</item>
        <item>+421</item>
        <item>+386</item>
        <item>+677</item>
        <item>+252</item>
        <item>+27</item>
        <item>+82</item>
        <item>+34</item>
        <item>+94</item>
        <item>+290</item>
        <item>+508</item>
        <item>+249</item>
        <item>+597</item>
        <item>+268</item>
        <item>+46</item>
        <item>+41</item>
        <item>+963</item>
        <item>+886</item>
        <item>+992</item>
        <item>+255</item>
        <item>+66</item>
        <item>+228</item>
        <item>+690</item>
        <item>+676</item>
        <item>+216</item>
        <item>+90</item>
        <item>+993</item>
        <item>+688</item>
        <item>+971</item>
        <item>+256</item>
        <item>+44</item>
        <item>+380</item>
        <item>+598</item>
        <item>+1</item>
        <item>+998</item>
        <item>+678</item>
        <item>+39</item>
        <item>+58</item>
        <item>+84</item>
        <item>+681</item>
        <item>+967</item>
        <item>+260</item>
        <item>+263</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="listing">Listing</string>
    <string name="view_all">View All</string>
    <string name="ratings_and_reviews">Ratings and reviews</string>
    <string name="transparent">Transparent</string>
    <string name="call_now">Call Now</string>
    <string name="view_on_map">View On Map</string>
    <string name="view_all_reviews">View All Reviews</string>
    <string name="skip">Skip</string>
    <string name="select_cities_you_would_like_to_visit">Select cities you would like to visit</string>
    <string name="community">Community</string>
    <string name="type_a_comment">Type a comment</string>
    <string name="idToken">593843555017-1i2btem8grock3nmgm119l2up5mmo704.apps.googleusercontent.com</string>
    <string name="facebook_app_id">756426388594304</string>
    <string name="fb_login_protocol_scheme">fb756426388594304</string>
    <string name="filter_results">Filter Results</string>
    <string name="forgot_password">Forgot password</string>
    <string name="continue_string">Continue</string>
    <string name="verify_code">Verify Code</string>
    <string name="type_the_code_sent_to_your_email">Type the code sent to your email</string>
    <string name="your_budget">Your budget</string>
    <string name="finish">Finish</string>
    <string name="back">Back</string>
    <string name="_1_2">1/2</string>
    <string name="night">/ night</string>
    <string name="view_profile">View Profile</string>
    <string name="deep_search">Deep search</string>
    <string name="rent">Rent</string>
    <string name="buy">Buy</string>
    <string name="property_type">Property type</string>
    <string name="price_range">Price range</string>
    <string name="beds">Beds</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7+</string>
    <string name="bedrooms">Bedrooms</string>
    <string name="_4P">4+</string>
    <string name="bathrooms">Bathrooms</string>
    <string name="badges">badges</string>
    <string name="green_house">Green House</string>
    <string name="top_10">Top 10</string>
    <string name="verified_broker">Verified broker</string>
    <string name="amenities">Amenities</string>
    <string name="wifi">WIFI</string>
    <string name="air_conditioner">Air conditioner</string>
    <string name="elevator">Elevator</string>
    <string name="view_all_amenities">View All Amenities</string>
    <string name="show_50_results">Show 50 Results</string>
    <string name="clears_filters">Clears Filters</string>
    <string name="search">Search</string>
    <string name="view_first_three">View First Three</string>
    <string name="account">Account</string>
    <string name="add_listing">Add listing</string>
    <string name="your_posts">Your posts</string>
    <string name="settings">Settings</string>
    <string name="faqs">FAQs</string>
    <string name="contact_us">Contact us</string>
    <string name="sign_out">Sign out</string>

</resources>