<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.LoginActivity"
    android:fillViewport="true"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Login.LoginActivity"
   >



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/VGuideline2.5percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.025" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/VGuideline50percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/VGuideline97.5percent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.975" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:paddingBottom="0dp"
        app:errorEnabled="true"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/passwordInputLayout"
        app:layout_constraintEnd_toStartOf="@+id/VGuideline97.5percent"
        app:layout_constraintStart_toStartOf="@+id/VGuideline2.5percent"
        app:layout_constraintTop_toBottomOf="@+id/orTextView">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/font"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/montserrat"
            android:hint="@string/email_address"
            android:textColor="@color/black"
            android:textColorHint="#A8A8A8"
            android:textSize="@dimen/_10ssp"
            android:textStyle="italic" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:paddingBottom="0dp"
        app:errorEnabled="true"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/signUpButton"
        app:layout_constraintEnd_toStartOf="@+id/VGuideline97.5percent"
        app:layout_constraintStart_toStartOf="@+id/VGuideline2.5percent"
        app:layout_constraintTop_toBottomOf="@+id/emailInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/montserrat"
            android:hint="@string/password"
            android:textColorHint="#A8A8A8"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            android:textStyle="italic" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal65percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.70" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal85percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90" />

    <TextView
        android:id="@+id/SignInTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="@dimen/_22ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="@dimen/_2sdp"
        android:layout_marginEnd="20dp"
        android:background="#F2F4F7"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/orTextView"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/VGuideline2.5percent"
        app:layout_constraintTop_toTopOf="@+id/orTextView" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="@dimen/_2sdp"
        android:layout_marginStart="20dp"
        android:background="#F2F4F7"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/orTextView"
        app:layout_constraintEnd_toStartOf="@+id/VGuideline97.5percent"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/orTextView" />

    <TextView
        android:id="@+id/orTextView"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/or"
        android:textColor="#71717A"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toEndOf="@+id/SignInTextView"
        app:layout_constraintStart_toStartOf="@+id/SignInTextView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUpButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:background="@drawable/backgroundforhelp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toTopOf="@+id/forgotPassword"
        app:layout_constraintEnd_toStartOf="@+id/VGuideline97.5percent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/VGuideline2.5percent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="@+id/VGuideline50percent"
        app:layout_constraintTop_toBottomOf="@+id/SignInTextView"
        app:srcCompat="@drawable/facebook" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toStartOf="@+id/VGuideline50percent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:srcCompat="@drawable/google" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/forget_password"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toTopOf="@+id/horizontal65percent"
        app:layout_constraintEnd_toStartOf="@+id/VGuideline97.5percent"
        app:layout_constraintTop_toBottomOf="@+id/signUpButton" />

    <TextView
        android:id="@+id/doNotHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/don_t_have_an_account"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toTopOf="@+id/horizontal85percent"
        app:layout_constraintEnd_toStartOf="@+id/VGuideline50percent"
        app:layout_constraintStart_toStartOf="@+id/VGuideline50percent"
        app:layout_constraintTop_toTopOf="@+id/horizontal85percent" />

    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/sign_up"
        android:textSize="@dimen/_10ssp"
        android:textColor="@color/orange_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/VGuideline50percent"
        app:layout_constraintStart_toStartOf="@+id/VGuideline50percent"
        app:layout_constraintTop_toBottomOf="@+id/doNotHaveAccount" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>